Minor comment update to the properties file

--- a/project.properties
+++ b/project.properties
@@ -9,3 +9,6 @@ groupId = com.nullprogram
 project.url = http://nullprogram.com/blog/2010/10/04/
 project.repo.url = https://github.com/skeeto/SampleJavaProject.git
 project.scm.url = https://github.com/skeeto/SampleJavaProject
+
+# I'm adding a few comments here just to demonstrate what a simple pull request would look like
+# with a PR template in place within this repository
